// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AudioResultPlayer — LTR/RTL snapshots > renders fallback player in LTR mode 1`] = `
<div>
  <div
    aria-label="audioUnavailable"
    class="rounded-lg border border-gray-200 bg-gray-50 p-4 dark:border-gray-700 dark:bg-gray-800"
    role="status"
  >
    <p
      class="mb-1 text-xs font-medium uppercase tracking-wide text-gray-500 dark:text-gray-400"
    >
      audioUnavailable
    </p>
    <p
      class="text-base leading-relaxed text-gray-800 dark:text-gray-200"
    >
      Your blood count is normal.
    </p>
  </div>
</div>
`;

exports[`AudioResultPlayer — LTR/RTL snapshots > renders fallback player in RTL mode (ar locale) 1`] = `
<div>
  <div
    aria-label="audioUnavailable"
    class="rounded-lg border border-gray-200 bg-gray-50 p-4 dark:border-gray-700 dark:bg-gray-800"
    role="status"
  >
    <p
      class="mb-1 text-xs font-medium uppercase tracking-wide text-gray-500 dark:text-gray-400"
    >
      audioUnavailable
    </p>
    <p
      class="text-base leading-relaxed text-gray-800 dark:text-gray-200"
    >
      تعداد دمك طبيعي.
    </p>
  </div>
</div>
`;

exports[`AudioResultPlayer — LTR/RTL snapshots > renders fallback player in RTL mode (prs locale) 1`] = `
<div>
  <div
    aria-label="audioUnavailable"
    class="rounded-lg border border-gray-200 bg-gray-50 p-4 dark:border-gray-700 dark:bg-gray-800"
    role="status"
  >
    <p
      class="mb-1 text-xs font-medium uppercase tracking-wide text-gray-500 dark:text-gray-400"
    >
      audioUnavailable
    </p>
    <p
      class="text-base leading-relaxed text-gray-800 dark:text-gray-200"
    >
      شمارش خون شما نرمال است.
    </p>
  </div>
</div>
`;

exports[`PatientResultSummary — LTR/RTL snapshots > renders in LTR mode 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <button
      aria-label="playAll"
      class="self-start rounded-full bg-blue-600 px-5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
      data-testid="play-all-button"
      type="button"
    >
      playAll
    </button>
    <div
      class="flex flex-col gap-3"
      data-testid="result-cards"
    >
      <div
        class="rounded-xl border border-gray-200 bg-card p-4 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-droplet text-red-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 22a7 7 0 0 0 7-7c0-2-1-3.9-3-5.5s-3.5-4-4-6.5c-.5 2.5-2 4.9-4 6.5C6 11.1 5 13 5 15a7 7 0 0 0 7 7z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-base font-semibold text-gray-900 dark:text-gray-100"
            >
              testName.cbc
            </p>
            <div
              class="mt-1"
            >
              <span
                aria-label="interpretation.normal"
                class="inline-flex items-center gap-1.5 text-green-700 dark:text-green-400 "
                role="img"
              >
                <span
                  aria-hidden="true"
                  class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-green-600"
                />
                <svg
                  aria-hidden="true"
                  class="flex-shrink-0"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="M9 12l2 2 4-4"
                  />
                </svg>
                <span
                  class="text-sm font-medium"
                >
                  interpretation.normal
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <p
            class="text-sm leading-relaxed text-gray-700 dark:text-gray-300"
          >
            Your blood count is normal.
          </p>
        </div>
        <div
          class="mt-3"
        >
          <button
            aria-expanded="false"
            class="text-sm text-blue-600 underline hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-200"
            type="button"
          >
            ▼ Read explanation
          </button>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-200 bg-card p-4 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart text-pink-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-base font-semibold text-gray-900 dark:text-gray-100"
            >
              testName.lipidPanel
            </p>
            <div
              class="mt-1"
            >
              <span
                aria-label="interpretation.low"
                class="inline-flex items-center gap-1.5 text-yellow-700 dark:text-yellow-400 "
                role="img"
              >
                <span
                  aria-hidden="true"
                  class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-yellow-500"
                />
                <svg
                  aria-hidden="true"
                  class="flex-shrink-0"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0z"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="9"
                    y2="13"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="17"
                    y2="17"
                  />
                </svg>
                <span
                  class="text-sm font-medium"
                >
                  interpretation.low
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <p
            class="text-sm leading-relaxed text-gray-700 dark:text-gray-300"
          >
            Your blood count is normal.
          </p>
        </div>
        <div
          class="mt-3"
        >
          <button
            aria-expanded="false"
            class="text-sm text-blue-600 underline hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-200"
            type="button"
          >
            ▼ Read explanation
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PatientResultSummary — LTR/RTL snapshots > renders in RTL mode (ar locale) 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <button
      aria-label="playAll"
      class="self-start rounded-full bg-blue-600 px-5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
      data-testid="play-all-button"
      type="button"
    >
      playAll
    </button>
    <div
      class="flex flex-col gap-3"
      data-testid="result-cards"
    >
      <div
        class="rounded-xl border border-gray-200 bg-card p-4 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-droplet text-red-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 22a7 7 0 0 0 7-7c0-2-1-3.9-3-5.5s-3.5-4-4-6.5c-.5 2.5-2 4.9-4 6.5C6 11.1 5 13 5 15a7 7 0 0 0 7 7z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-base font-semibold text-gray-900 dark:text-gray-100"
            >
              testName.cbc
            </p>
            <div
              class="mt-1"
            >
              <span
                aria-label="interpretation.normal"
                class="inline-flex items-center gap-1.5 text-green-700 dark:text-green-400 "
                role="img"
              >
                <span
                  aria-hidden="true"
                  class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-green-600"
                />
                <svg
                  aria-hidden="true"
                  class="flex-shrink-0"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="M9 12l2 2 4-4"
                  />
                </svg>
                <span
                  class="text-sm font-medium"
                >
                  interpretation.normal
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <p
            class="text-sm leading-relaxed text-gray-700 dark:text-gray-300"
          >
            تعداد دمك طبيعي.
          </p>
        </div>
        <div
          class="mt-3"
        >
          <button
            aria-expanded="false"
            class="text-sm text-blue-600 underline hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-200"
            type="button"
          >
            ▼ Read explanation
          </button>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-200 bg-card p-4 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart text-pink-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-base font-semibold text-gray-900 dark:text-gray-100"
            >
              testName.lipidPanel
            </p>
            <div
              class="mt-1"
            >
              <span
                aria-label="interpretation.low"
                class="inline-flex items-center gap-1.5 text-yellow-700 dark:text-yellow-400 "
                role="img"
              >
                <span
                  aria-hidden="true"
                  class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-yellow-500"
                />
                <svg
                  aria-hidden="true"
                  class="flex-shrink-0"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0z"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="9"
                    y2="13"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="17"
                    y2="17"
                  />
                </svg>
                <span
                  class="text-sm font-medium"
                >
                  interpretation.low
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <p
            class="text-sm leading-relaxed text-gray-700 dark:text-gray-300"
          >
            تعداد دمك طبيعي.
          </p>
        </div>
        <div
          class="mt-3"
        >
          <button
            aria-expanded="false"
            class="text-sm text-blue-600 underline hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-200"
            type="button"
          >
            ▼ Read explanation
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PatientResultSummary — LTR/RTL snapshots > renders in RTL mode (prs locale) 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <button
      aria-label="playAll"
      class="self-start rounded-full bg-blue-600 px-5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
      data-testid="play-all-button"
      type="button"
    >
      playAll
    </button>
    <div
      class="flex flex-col gap-3"
      data-testid="result-cards"
    >
      <div
        class="rounded-xl border border-gray-200 bg-card p-4 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-droplet text-red-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 22a7 7 0 0 0 7-7c0-2-1-3.9-3-5.5s-3.5-4-4-6.5c-.5 2.5-2 4.9-4 6.5C6 11.1 5 13 5 15a7 7 0 0 0 7 7z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-base font-semibold text-gray-900 dark:text-gray-100"
            >
              testName.cbc
            </p>
            <div
              class="mt-1"
            >
              <span
                aria-label="interpretation.normal"
                class="inline-flex items-center gap-1.5 text-green-700 dark:text-green-400 "
                role="img"
              >
                <span
                  aria-hidden="true"
                  class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-green-600"
                />
                <svg
                  aria-hidden="true"
                  class="flex-shrink-0"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="M9 12l2 2 4-4"
                  />
                </svg>
                <span
                  class="text-sm font-medium"
                >
                  interpretation.normal
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <p
            class="text-sm leading-relaxed text-gray-700 dark:text-gray-300"
          >
            شمارش خون شما نرمال است.
          </p>
        </div>
        <div
          class="mt-3"
        >
          <button
            aria-expanded="false"
            class="text-sm text-blue-600 underline hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-200"
            type="button"
          >
            ▼ Read explanation
          </button>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-200 bg-card p-4 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart text-pink-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-base font-semibold text-gray-900 dark:text-gray-100"
            >
              testName.lipidPanel
            </p>
            <div
              class="mt-1"
            >
              <span
                aria-label="interpretation.low"
                class="inline-flex items-center gap-1.5 text-yellow-700 dark:text-yellow-400 "
                role="img"
              >
                <span
                  aria-hidden="true"
                  class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-yellow-500"
                />
                <svg
                  aria-hidden="true"
                  class="flex-shrink-0"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0z"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="9"
                    y2="13"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="17"
                    y2="17"
                  />
                </svg>
                <span
                  class="text-sm font-medium"
                >
                  interpretation.low
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <p
            class="text-sm leading-relaxed text-gray-700 dark:text-gray-300"
          >
            شمارش خون شما نرمال است.
          </p>
        </div>
        <div
          class="mt-3"
        >
          <button
            aria-expanded="false"
            class="text-sm text-blue-600 underline hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-200"
            type="button"
          >
            ▼ Read explanation
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PatientResultSummary — LTR/RTL snapshots > renders in RTL mode (ps locale) 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <button
      aria-label="playAll"
      class="self-start rounded-full bg-blue-600 px-5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
      data-testid="play-all-button"
      type="button"
    >
      playAll
    </button>
    <div
      class="flex flex-col gap-3"
      data-testid="result-cards"
    >
      <div
        class="rounded-xl border border-gray-200 bg-card p-4 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-droplet text-red-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 22a7 7 0 0 0 7-7c0-2-1-3.9-3-5.5s-3.5-4-4-6.5c-.5 2.5-2 4.9-4 6.5C6 11.1 5 13 5 15a7 7 0 0 0 7 7z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-base font-semibold text-gray-900 dark:text-gray-100"
            >
              testName.cbc
            </p>
            <div
              class="mt-1"
            >
              <span
                aria-label="interpretation.normal"
                class="inline-flex items-center gap-1.5 text-green-700 dark:text-green-400 "
                role="img"
              >
                <span
                  aria-hidden="true"
                  class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-green-600"
                />
                <svg
                  aria-hidden="true"
                  class="flex-shrink-0"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="M9 12l2 2 4-4"
                  />
                </svg>
                <span
                  class="text-sm font-medium"
                >
                  interpretation.normal
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <p
            class="text-sm leading-relaxed text-gray-700 dark:text-gray-300"
          >
            ستاسو د وینې شمیرنه نورمال ده.
          </p>
        </div>
        <div
          class="mt-3"
        >
          <button
            aria-expanded="false"
            class="text-sm text-blue-600 underline hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-200"
            type="button"
          >
            ▼ Read explanation
          </button>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-200 bg-card p-4 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart text-pink-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="text-base font-semibold text-gray-900 dark:text-gray-100"
            >
              testName.lipidPanel
            </p>
            <div
              class="mt-1"
            >
              <span
                aria-label="interpretation.low"
                class="inline-flex items-center gap-1.5 text-yellow-700 dark:text-yellow-400 "
                role="img"
              >
                <span
                  aria-hidden="true"
                  class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-yellow-500"
                />
                <svg
                  aria-hidden="true"
                  class="flex-shrink-0"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0z"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="9"
                    y2="13"
                  />
                  <line
                    x1="12"
                    x2="12.01"
                    y1="17"
                    y2="17"
                  />
                </svg>
                <span
                  class="text-sm font-medium"
                >
                  interpretation.low
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="mt-4"
        >
          <p
            class="text-sm leading-relaxed text-gray-700 dark:text-gray-300"
          >
            ستاسو د وینې شمیرنه نورمال ده.
          </p>
        </div>
        <div
          class="mt-3"
        >
          <button
            aria-expanded="false"
            class="text-sm text-blue-600 underline hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-200"
            type="button"
          >
            ▼ Read explanation
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResultColorIndicator — LTR/RTL snapshots > renders correctly in LTR mode 1`] = `
<div>
  <span
    aria-label="Normal"
    class="inline-flex items-center gap-1.5 text-green-700 dark:text-green-400 "
    role="img"
  >
    <span
      aria-hidden="true"
      class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-green-600"
    />
    <svg
      aria-hidden="true"
      class="flex-shrink-0"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2.5"
      viewBox="0 0 24 24"
      width="16"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9 12l2 2 4-4"
      />
    </svg>
    <span
      class="text-sm font-medium"
    >
      Normal
    </span>
  </span>
</div>
`;

exports[`ResultColorIndicator — LTR/RTL snapshots > renders correctly in RTL mode 1`] = `
<div>
  <span
    aria-label="Normal"
    class="inline-flex items-center gap-1.5 text-green-700 dark:text-green-400 "
    role="img"
  >
    <span
      aria-hidden="true"
      class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-green-600"
    />
    <svg
      aria-hidden="true"
      class="flex-shrink-0"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2.5"
      viewBox="0 0 24 24"
      width="16"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9 12l2 2 4-4"
      />
    </svg>
    <span
      class="text-sm font-medium"
    >
      Normal
    </span>
  </span>
</div>
`;

exports[`ResultColorIndicator — LTR/RTL snapshots > renders critical-low correctly in RTL mode 1`] = `
<div>
  <span
    aria-label="Critical — Low"
    class="inline-flex items-center gap-1.5 text-red-700 dark:text-red-400 "
    role="img"
  >
    <span
      aria-hidden="true"
      class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-red-600"
    />
    <svg
      aria-hidden="true"
      class="flex-shrink-0"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2.5"
      viewBox="0 0 24 24"
      width="16"
    >
      <polygon
        points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
      />
      <line
        x1="15"
        x2="9"
        y1="9"
        y2="15"
      />
      <line
        x1="9"
        x2="15"
        y1="9"
        y2="15"
      />
    </svg>
    <span
      class="text-sm font-medium"
    >
      Critical — Low
    </span>
  </span>
</div>
`;

exports[`ResultColorIndicator — LTR/RTL snapshots > renders high correctly in LTR mode 1`] = `
<div>
  <span
    aria-label="High"
    class="inline-flex items-center gap-1.5 text-yellow-700 dark:text-yellow-400 "
    role="img"
  >
    <span
      aria-hidden="true"
      class="inline-block h-2.5 w-2.5 flex-shrink-0 rounded-full bg-yellow-500"
    />
    <svg
      aria-hidden="true"
      class="flex-shrink-0"
      fill="none"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2.5"
      viewBox="0 0 24 24"
      width="16"
    >
      <path
        d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0z"
      />
      <line
        x1="12"
        x2="12"
        y1="9"
        y2="13"
      />
      <line
        x1="12"
        x2="12.01"
        y1="17"
        y2="17"
      />
    </svg>
    <span
      class="text-sm font-medium"
    >
      High
    </span>
  </span>
</div>
`;
